--- a/app/src/main/res/layout/content_income_.xml
+++ b/app/src/main/res/layout/content_income_.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Enter your income, we calculate tax for you"
-        android:id="@+id/textView"
+        android:id="@+id/showView"
         android:textStyle="bold"
         android:textSize="35px"
         android:layout_alignParentTop="true"
@@ -25,56 +25,56 @@
         android:layout_width="200sp"
         android:ems="10"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_below="@+id/textView"
+        android:id="@+id/blockText"
+        android:layout_below="@+id/showView"
         android:hint="wage"
         android:layout_centerHorizontal="true"
         />
     <EditText
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/editText"
+        android:id="@+id/blockText2"
+        android:layout_below="@+id/blockText"
         android:hint="taxable refund"
         android:layout_centerHorizontal="true"
         />
     <EditText
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:id="@+id/editText3"
-        android:layout_below="@+id/editText2"
+        android:id="@+id/blockText3"
+        android:layout_below="@+id/blockText2"
         android:hint="scholarship"
         android:layout_centerHorizontal="true"
         />
     <EditText
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:id="@+id/editText4"
-        android:layout_below="@+id/editText3"
+        android:id="@+id/blockText4"
+        android:layout_below="@+id/blockText3"
         android:hint="treaty"
         android:layout_centerHorizontal="true"
         />
     <EditText
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:id="@+id/editText5"
-        android:layout_below="@+id/editText4"
+        android:id="@+id/blockText5"
+        android:layout_below="@+id/blockText4"
         android:hint="treaty type"
         android:layout_centerHorizontal="true"
         />
     <EditText
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:id="@+id/editText6"
-        android:layout_below="@+id/editText5"
+        android:id="@+id/blockText6"
+        android:layout_below="@+id/blockText5"
         android:hint="itemlized deduction"
         android:layout_centerHorizontal="true"
         />
     <EditText
         android:layout_width="200sp"
         android:layout_height="wrap_content"
-        android:id="@+id/editText7"
-        android:layout_below="@+id/editText6"
+        android:id="@+id/blockText7"
+        android:layout_below="@+id/blockText6"
         android:hint="exemption"
         android:layout_centerHorizontal="true"
         />
