--- a/app/src/main/res/layout/content_income_confirm.xml
+++ b/app/src/main/res/layout/content_income_confirm.xml
@@ -127,7 +127,7 @@
         android:textSize = "50px"
         android:id="@+id/textView15"
         android:layout_below="@+id/textView12"
-        android:layout_toEndOf="@+id/textView12" />
+        android:layout_alignEnd="@+id/textView19" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -163,7 +163,7 @@
         android:textSize = "50px"
         android:id="@+id/textView19"
         android:layout_below="@+id/textView17"
-        android:layout_alignStart="@+id/textView17" />
+        android:layout_toEndOf="@+id/textView18" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -177,11 +177,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
         android:textSize = "50px"
         android:id="@+id/textView21"
         android:layout_below="@+id/textView19"
-        android:layout_alignStart="@+id/textView19" />
+        android:layout_alignEnd="@+id/button3"
+        android:layout_toEndOf="@+id/textView20" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -199,7 +199,7 @@
         android:id="@+id/textView23"
         android:textSize = "50px"
         android:layout_below="@+id/textView20"
-        android:layout_alignStart="@+id/textView21" />
+        android:layout_toEndOf="@+id/textView6" />
 
     <TextView
         android:layout_width="wrap_content"
