--- a/app/src/main/res/layout/content_income_confirm.xml
+++ b/app/src/main/res/layout/content_income_confirm.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Please comfirm your income information"
+        android:text="Please confirm your income information"
         android:textSize = "35dp"
         android:textStyle="bold"
         android:id="@+id/textView3"
@@ -222,7 +222,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Comfirm!"
+        android:text="Confirm!"
         android:id="@+id/button3"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
