--- a/app/src/main/res/layout/content_welcome_page.xml
+++ b/app/src/main/res/layout/content_welcome_page.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fadingEdge="vertical">
+    <RelativeLayout
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -18,7 +23,7 @@
         android:checked="false"
         style="@style/GenderCheckBox"
         android:layout_marginLeft="10dp"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/checkBox3"
         android:layout_alignParentStart="true" />
 
     <CheckBox
@@ -28,30 +33,63 @@
         android:id="@+id/checkBox2"
         android:checked="false"
         style="@style/StudentCheckBox"
-        android:layout_marginEnd="10dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="99dp" />
 
     <CheckBox
         android:layout_width="150dp"
         android:layout_height="180dp"
         android:text="Employment"
         android:id="@+id/checkBox3"
-        android:layout_below="@+id/checkBox"
-        android:layout_alignStart="@+id/checkBox"
-        android:layout_marginTop="20dp"
         android:checked="false"
-        style="@style/EmploymentCheckBox" />
+        style="@style/EmploymentCheckBox"
+        android:layout_below="@+id/checkBox2"
+        android:layout_alignStart="@+id/checkBox" />
 
     <CheckBox
         android:layout_width="150dp"
         android:layout_height="180dp"
         android:text="Income"
         android:id="@+id/checkBox4"
-        android:layout_alignTop="@+id/checkBox3"
-        android:layout_alignStart="@+id/checkBox2"
         android:checked="false"
-        style="@style/IncomeCheckBox"/>
+        style="@style/IncomeCheckBox"
+        android:layout_below="@+id/checkBox2"
+        android:layout_alignStart="@+id/checkBox2" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="First, Let Us Know Something About You!"
+        android:gravity="center"
+        android:textSize="30dp"
+        android:id="@+id/textView26"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+    <Button
+        android:id="@+id/reged"
+        android:layout_below="@+id/checkBox4"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
+        android:text="Already Have One Account?"
+        android:textColor="@color/button_text"
+        android:textSize="20dp"
+        android:background="#0e000000"
+        />
+        <Button
+            android:id="@+id/nonreged"
+            android:layout_below="@+id/reged"
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_centerHorizontal="true"
+            android:text="Sign Up Now!"
+            android:textColor="@color/button_text"
+            android:textSize="20dp"
+            android:background="#0e000000"
+            />
 
 </RelativeLayout>
+</ScrollView>
