--- a/app/src/main/res/drawable/checkbox_student_selector.xml
+++ b/app/src/main/res/drawable/checkbox_student_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true"
-        android:drawable="@drawable/slowsheepnotstudent"/>
+        android:drawable="@drawable/nonstudent"/>
     <item android:state_checked="false"
-        android:drawable="@drawable/littlegreystudent" />
+        android:drawable="@drawable/student" />
 </selector>
