--- a/app/src/main/res/layout/content_welcome_page.xml
+++ b/app/src/main/res/layout/content_welcome_page.xml
@@ -16,44 +16,47 @@
     tools:context="com.example.sharon.myapplication.WelcomePageActivity">
 
     <CheckBox
-        android:layout_width="150dp"
-        android:layout_height="180dp"
+        android:layout_width="125dp"
+        android:layout_height="150dp"
         android:text="Gender"
         android:id="@+id/checkBox"
         android:checked="false"
         style="@style/GenderCheckBox"
-        android:layout_marginLeft="10dp"
-        android:layout_above="@+id/checkBox3"
+        android:layout_marginLeft="30dp"
+        android:layout_alignTop="@+id/checkBox2"
         android:layout_alignParentStart="true" />
 
     <CheckBox
-        android:layout_width="150dp"
-        android:layout_height="180dp"
+        android:layout_width="125dp"
+        android:layout_height="150dp"
         android:text="Student"
         android:id="@+id/checkBox2"
         android:checked="false"
         style="@style/StudentCheckBox"
+        android:layout_marginRight="30dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="99dp" />
 
     <CheckBox
-        android:layout_width="150dp"
-        android:layout_height="180dp"
+        android:layout_width="125dp"
+        android:layout_height="150dp"
         android:text="Employment"
         android:id="@+id/checkBox3"
         android:checked="false"
         style="@style/EmploymentCheckBox"
+        android:layout_marginTop="30dp"
         android:layout_below="@+id/checkBox2"
         android:layout_alignStart="@+id/checkBox" />
 
     <CheckBox
-        android:layout_width="150dp"
-        android:layout_height="180dp"
+        android:layout_width="125dp"
+        android:layout_height="150dp"
         android:text="Income"
         android:id="@+id/checkBox4"
         android:checked="false"
         style="@style/IncomeCheckBox"
+        android:layout_marginTop="30dp"
         android:layout_below="@+id/checkBox2"
         android:layout_alignStart="@+id/checkBox2" />
 
@@ -75,6 +78,7 @@
         android:layout_centerHorizontal="true"
         android:text="Already Have One Account?"
         android:textColor="@color/button_text"
+        android:layout_marginTop="30dp"
         android:textSize="20dp"
         android:background="#0e000000"
         />
